fixed spacing in about and about-avi

--- a/src/components/about-avi-page.module.scss
+++ b/src/components/about-avi-page.module.scss
@@ -16,7 +16,7 @@
   }
 }
 .about_small {
-  height: 67rem;
+  height: 73rem;
   width: 100%;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
